[gd_scene load_steps=3 format=3 uid="uid://qjplq7pr8npp"]

[ext_resource type="Script" path="res://Scripts/Battle/character_choice_panel.gd" id="1_q30dr"]

[sub_resource type="LabelSettings" id="LabelSettings_jq5p0"]
font_size = 30

[node name="CharacterChoicePanel" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 400.0
grow_horizontal = 2
mouse_filter = 2
script = ExtResource("1_q30dr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 11.77
color = Color(0.521569, 0.521569, 0.521569, 1)

[node name="Cancel" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -50.0
offset_right = -29.9998
offset_bottom = -19.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.5, 1.41253)
focus_mode = 0
text = "취소"

[node name="Done" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -50.0
offset_right = 20.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.5, 1.41253)
focus_mode = 0
text = "완료
"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -90.0
offset_right = -10.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.88)
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -65.9
offset_right = 145.0
offset_bottom = -9.89997
grow_horizontal = 2
grow_vertical = 2
text = "나에게 적용하기"
label_settings = SubResource("LabelSettings_jq5p0")

[connection signal="pressed" from="ColorRect/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="ColorRect/Done" to="." method="_on_done_pressed"]
